# rest-api-project

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  db.py  docker-entrypoint.sh  pyproject.toml  schemas.py  settings.py  tasks.py
core/: config.py
migrations/versions/: 3f81be364054_.py  520781d3ca14_.py  8fb19112d92f_.py  9eaca9df226d_.py  be6f236405b9_.py  c50b7b5487f7_initial_migration.py
models/: item_tags.py  tag.py  user.py
resources/: item.py  store.py  tag.py  user.py
templates/email/: action.html
